--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
     </div>
     <div class="wrapper">
         <header>
-            <nav id="navbar">
+            <div class="toggler">
+                <i class="fa-solid fa-bars fa-2x text-white"></i>
+
+            </div>
+            <nav id="navbar" class="navbar">
                 <ul class="nav-items">
                     <li><a href="#home">Home</a></li>
                     <li><a class="" href="#about">About</a></li>
@@ -43,15 +47,23 @@
                 </div>
             </section>
             <section id="about" class="about">
-                <h1>What can I do?</h1>
-                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo asperiores sed praesentium corporis
-                    minus ipsum? Pariatur quam minima, est ullam ab explicabo placeat sapiente quidem animi, consectetur
-                    sed. Veniam, ut id aliquid corrupti eos porro, perspiciatis sed at modi quisquam excepturi
-                    exercitationem recusandae ab totam numquam neque obcaecati eius iusto Lorem ipsum dolor sit amet,
-                    consectetur adipisicing elit. Nihil animi, placeat natus esse eaque inventore, nostrum ullam maxime,
-                    nulla sit quo quaerat eum laborum exercitationem recusandae repudiandae eveniet? Facere fugiat vitae
-                    officia expedita nam pariatur velit at, unde ut delectus animi harum tenetur maxime illo molestiae
-                    quae autem corporis voluptate?</p>
+                <div class="dos">
+                    <h1>What can I do?</h1>
+                    <p>I have been doing <span class="dos-emp">FrontEnd Web Development</span> for 2 years now.</p>
+                    <p>Mostly I prefer <span class="dos-emp">Remote Work</span></p>
+                    <p><span class="dos-emp">Experienced</span> in developing Frontends of the individuals and
+                        Buisnesses.</p>
+                    <p>Mostly doing <span class="dos-emp">Freelace Work</span></p>
+                    <p><span class="dos-emp">Technologies</span> I use are listed <i class="fa fa-arrow-right"
+                            aria-hidden="true"></i></p>
+                </div>
+                <div class="skills">
+                    <i class="fa-brands fa-html5 fa-5x" aria-hidden="true"></i>
+                    <i class="fa-brands fa-css3 fa-5x" aria-hidden="true"></i>
+                    <i class="fa-brands fa-bootstrap fa-5x"></i>
+                    <i class="fa-brands fa-js fa-5x" aria-hidden="true"></i>
+                    <i class="fa-brands fa-react fa-5x" aria-hidden="true"></i>
+                </div>
             </section>
             <section id="projects" class="projects">
                 <div class="main-projects">
@@ -61,8 +73,8 @@
                             <img src="/images/project1.png" alt=""></a>
                         <a href="https://codepen.io/ashercodes/pen/XWVyWwz" target="_blank">
                             <img src="/images/project2.png" alt="">
-                            <a href="https://codepen.io/ashercodes/pen/oNpPaXY"target= "_blank"> <img
-                                src="/images/project3.png" alt=""></a>
+                            <a href="https://codepen.io/ashercodes/pen/oNpPaXY" target="_blank"> <img
+                                    src="/images/project3.png" alt=""></a>
                             <a href="https://codepen.io/ashercodes/pen/oNpPvXW" target="_blank">
                                 <img src="/images/project4.png" alt=""></a>
                     </div>
@@ -70,7 +82,8 @@
                 <div class="other-projects">
                     <h1>Browse other <span>Projects</span></h1>
                     <div class="other-projects-links">
-                        <a href="https://codepen.io/ashercodes" target="_blank"><img src="" alt="">CodePen <i class="fa fa-codepen" aria-hidden="true"></i></a>
+                        <a href="https://codepen.io/ashercodes" target="_blank"><img src="" alt="">CodePen <i
+                                class="fa fa-codepen" aria-hidden="true"></i></a>
                     </div>
                 </div>
             </section>
@@ -83,7 +96,7 @@
                 <div class="socials">
                     <a href="https://www.facebook.com/asher.ayub.69" target="_blank"><i
                             class="icon-color fa-brands fa-facebook fa-2xl p-2"></i></a>
-                    <a href="https://github.com/callmecod3r" target="_blank"><i
+                    <a href="https://github.com/asherayub" target="_blank"><i
                             class="icon-color fa-brands fa-github fa-2xl p-2"></i></a>
                     <a href="https://pk.linkedin.com/in/asher-ayub-9976b5180" target="_blank"><i
                             class="icon-color fa-brands fa-linkedin fa-2xl p-2"></i></a>
